refactored editor part

--- a/LuaMachine.uplugin
+++ b/LuaMachine.uplugin
@@ -18,6 +18,11 @@
       "Name": "LuaMachine",
       "Type": "Runtime",
       "LoadingPhase": "Default"
+    },
+    {
+      "Name": "LuaMachineEditor",
+      "Type": "Editor",
+      "LoadingPhase": "Default"
     }
   ]
 }
