preliminary android support

--- a/LuaMachine.uplugin
+++ b/LuaMachine.uplugin
@@ -20,7 +20,8 @@
       "LoadingPhase": "Default",
       "WhitelistPlatforms": [
         "Mac",
-        "Win64"
+        "Win64",
+        "Android"
       ]
     },
     {
