Marketplace guildlines fixes

--- a/LuaMachine.uplugin
+++ b/LuaMachine.uplugin
@@ -8,7 +8,7 @@
   "CreatedBy": "Roberto De Ioris",
   "CreatedByURL": "https://github.com/rdeioris",
   "DocsURL": "https://github.com/rdeioris/LuaMachine",
-  "MarketplaceURL": "",
+  "MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/48a58a495c3f4d788fc9195bceff2ec8",
   "SupportURL": "https://github.com/rdeioris/LuaMachine",
   "CanContainContent": true,
   "IsBetaVersion": true,
