--- a/LuaMachine.uplugin
+++ b/LuaMachine.uplugin
@@ -11,6 +11,7 @@
   "MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/48a58a495c3f4d788fc9195bceff2ec8",
   "SupportURL": "https://github.com/rdeioris/LuaMachine",
   "CanContainContent": true,
+  "EngineVersion": "4.21.0",
   "IsBetaVersion": true,
   "Installed": false,
   "Modules": [
