--- a/LuaMachine.uplugin
+++ b/LuaMachine.uplugin
@@ -22,7 +22,8 @@
       "WhitelistPlatforms": [
         "Mac",
         "Win64",
-        "Android"
+        "Android",
+        "IOS"
       ]
     },
     {
