--- a/LuaMachine.uplugin
+++ b/LuaMachine.uplugin
@@ -17,7 +17,7 @@
     {
       "Name": "LuaMachine",
       "Type": "Runtime",
-      "LoadingPhase": "Default",
+      "LoadingPhase": "PreDefault",
       "WhitelistPlatforms": [
         "Mac",
         "Win64",
