use AArch64 instead of Arm64

--- a/LuaMachine.uplugin
+++ b/LuaMachine.uplugin
@@ -22,7 +22,7 @@
         "Mac",
         "Win64",
         "Linux",
-        "LinuxArm64",
+        "LinuxAArch64",
         "Android",
         "IOS"
       ]
