added official support for hololens

--- a/LuaMachine.uplugin
+++ b/LuaMachine.uplugin
@@ -24,7 +24,8 @@
         "Linux",
         "LinuxArm64",
         "Android",
-        "IOS"
+        "IOS",
+        "Hololens"
       ]
     },
     {
